# Njalla-test

./: .gitignore  setup.cfg  setup.py
.github/workflows/: publish.yml  pylint_pr.yml
Njalla/: API.py  Domain.py  Server.py  User.py  VPN.py  Wallet.py  __init__.py
Njalla.egg-info/: PKG-INFO  SOURCES.txt
