[metadata]
name = pyrobox
version = 0.1
author = Rasan
author_email= wwwqweasd147@gmail.com
description = A python library built to integrate the njal.la API
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
home_page = https://github.com/RaSan147/pyrobox
project_urls =
    Bug Tracker = https://github.com/DevCa-IO/Njalla/issues
    Documentation = https://github.com/DevCa-IO/Njalla/
    Source Code = https://github.com/DevCa-IO/Njalla/
    Release Notes = https://github.com/DevCa-IO/Njalla/


classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Communications :: File Sharing

; [options]
; python_requires = >=3.7
